fix horizontal overflow on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
     padding: 0;
     font-size: 62.5%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 
     --accent: #FFB700;
     --background: #000000;
